--- a/assets/sharedstyles/vars.styl
+++ b/assets/sharedstyles/vars.styl
@@ -9,7 +9,7 @@ my-colors = {
 	text-light: #999B9F
 	primary: #BD268E
 	secondary: #68dcc8
-	light-blue:#f2fafe
+	bg:#f2f2f2
 	success: #478F71
 	warning: #F26922
 	error: #F26922
