--- a/layouts/styles/typography.styl
+++ b/layouts/styles/typography.styl
@@ -49,9 +49,8 @@ h4
 	font-size 20px
 	line-height 1.4
 h5
-	font-size 9px
-	letter-spacing 3.4px
-	text-transform uppercase
+	font-size 1rem
+	color $text-light
 	line-height 1.6
 a,p a
 	text-decoration none
@@ -96,6 +95,7 @@ fieldset
 small,fieldset
 	b,strong,a
 		bold()
+
 // .btn, button
 // 	display inline-block
 // 	appearance none
