--- a/assets/sharedstyles/vars.styl
+++ b/assets/sharedstyles/vars.styl
@@ -7,7 +7,7 @@ my-colors = {
 	white: #ffffff
 	text: #686A6F
 	text-light: #999B9F
-	primary: #BD268E
+	primary: #F0206B
 	secondary: #68dcc8
 	bg:#f2f2f2
 	success: #478F71
