--- a/layouts/styles/typography.styl
+++ b/layouts/styles/typography.styl
@@ -29,7 +29,8 @@ h1, h2, h3, h4, h5
 		color $primary
 h1
 	font-size 7.2rem
-	line-height 1.2
+	line-height .9
+	margin 1.6rem 0 2.4rem 0
 	+mobile()
 		font-size 4.2rem
 h2
