add subnav, add responsivness

--- a/assets/sharedstyles/vars.styl
+++ b/assets/sharedstyles/vars.styl
@@ -36,7 +36,8 @@ landscape()
 		{block}
 
 $pagewidth = 1440px
-
+gtc(var)
+	grid-template-columns var
 section()
 	max-width $pagewidth
 	margin 0 auto
