--- a/layouts/styles/typography.styl
+++ b/layouts/styles/typography.styl
@@ -19,7 +19,8 @@ p
 	line-height 1.666
 	font-size 1.8rem
 	color $text
-
+	+mobile()
+		font-size 1.2rem
 h1, h2, h3, h4, h5
 	headline()
 	color $black
