--- a/layouts/styles/typography.styl
+++ b/layouts/styles/typography.styl
@@ -51,7 +51,7 @@ h4
 	font-size 20px
 	line-height 1.4
 h5
-	font-size 1rem
+	font-size 1.4rem
 	color $text-light
 	line-height 1.6
 a,p a
@@ -67,6 +67,11 @@ ul
 	li
 		list-style-type none
 		line-height 1.6
+ol
+	margin-top 4.2rem
+	li
+		font-size 1rem
+		margin-left 1rem
 hr
 	height 1px
 	background $border
