--- a/layouts/styles/typography.styl
+++ b/layouts/styles/typography.styl
@@ -50,10 +50,11 @@ h3
 h4
 	font-size 20px
 	line-height 1.4
-h5
+h5,.h5
 	font-size 1.4rem
 	color $text-light
 	line-height 1.6
+	bold()
 a,p a
 	text-decoration none
 	color $text
